# HysteriaCoreClustering

./: .gitignore  CMakeLists.txt  README  TODO  TODO_ANTICHEAT  revision.h.in.cmake  voice opcodes.txt
cmake/: genrev.cmake  (+2 more)
dep/acelite/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h
src/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h  RealmSocket.cpp  RealmSocket.h
src/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  VMapDefinitions.h  VMapTools.h
src/server/collision/Management/: IMMAPManager.h  IVMapManager.h  MMapFactory.cpp  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/server/collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/server/collision/Models/: GameObjectModel.cpp  GameObjectModel.h  ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
src/server/game/API/: ArenaAPI.cpp  ArenaAPI.h  BattlegroundAPI.cpp  BattlegroundAPI.h  DungeonAPI.cpp  DungeonAPI.h  PlayerAPI.cpp  PlayerAPI.h  RaidAPI.cpp  RaidAPI.h
src/server/game/AccountControl/: AccountControl.cpp
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/Addons/: AddonMgr.cpp  AddonMgr.h
src/server/game/Anticheat/: AnticheatMgr.cpp  AnticheatMgr.h  MovementChecker.cpp  MovementChecker.h
src/server/game/ArenaSpectator/: ArenaSpectator.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseBotBuyer.cpp  AuctionHouseBotBuyer.h  AuctionHouseBotSeller.cpp  AuctionHouseBotSeller.h
src/server/game/Battlefield/: Battlefield.cpp  Battlefield.h  BattlefieldHandler.cpp  BattlefieldMgr.cpp  BattlefieldMgr.h
src/server/game/Battlegrounds/: ArenaTeam.cpp  ArenaTeam.h  ArenaTeamMgr.cpp  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.cpp
src/server/game/Calendar/: CalendarMgr.cpp  CalendarMgr.h
src/server/game/Chat/: Chat.cpp  Chat.h  ChatLink.cpp  ChatLink.h
src/server/game/Combat/: HostileRefManager.cpp  HostileRefManager.h  ThreatManager.cpp  ThreatManager.h  UnitEvents.h
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h  DisableMgr.cpp  DisableMgr.h
src/server/game/Crossfaction/: Crossfaction.cpp  Crossfaction.h
src/server/game/DataStores/: DBCEnums.h  DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h
src/server/game/DungeonFinding/: LFG.cpp  LFG.h  LFGGroupData.cpp  LFGGroupData.h  LFGMgr.cpp  LFGMgr.h  LFGPlayerData.cpp  LFGPlayerData.h  LFGQueue.cpp  LFGQueue.h  LFGScripts.cpp  LFGScripts.h
src/server/game/Events/: GameEventMgr.cpp  GameEventMgr.h
src/server/game/Globals/: ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/: Grid.h  GridDefines.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  ObjectGridLoader.cpp  ObjectGridLoader.h
src/server/game/Groups/: Group.cpp  Group.h  GroupMgr.cpp  GroupMgr.h  GroupRefManager.h  GroupReference.cpp  GroupReference.h
src/server/game/Guilds/: Guild.cpp  Guild.h  GuildMgr.cpp  GuildMgr.h
src/server/game/Handlers/: 1v1.h  AddonHandler.cpp  AddonHandler.h  ArenaTeamHandler.cpp  AuctionHouseHandler.cpp  AuthHandler.cpp  BattleGroundHandler.cpp  CalendarHandler.cpp  ChannelHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  CombatHandler.cpp  DuelHandler.cpp  GroupHandler.cpp  GuildHandler.cpp  ItemHandler.cpp  LFGHandler.cpp  LootHandler.cpp  MailHandler.cpp  MiscHandler.cpp  MovementHandler.cpp  NPCHandler.cpp  NPCHandler.h  PetHandler.cpp  PetitionsHandler.cpp  QueryHandler.cpp  QuestHandler.cpp  ReferAFriendHandler.cpp  SkillHandler.cpp  SpellHandler.cpp  TaxiHandler.cpp  TicketHandler.cpp  TradeHandler.cpp  VehicleHandler.cpp
src/server/game/Instances/: InstanceSaveMgr.cpp  InstanceSaveMgr.h  InstanceScript.cpp  InstanceScript.h
src/server/game/Loot/: LootItemStorage.cpp  LootItemStorage.h  LootMgr.cpp  LootMgr.h
src/server/game/Mails/: Mail.cpp  Mail.h
src/server/game/Maps/: Map.cpp  Map.h  MapInstanced.cpp  MapInstanced.h  MapManager.cpp  MapManager.h  MapRefManager.h  MapReference.h  MapRelations.cpp  MapRelations.h  TransportMgr.cpp  TransportMgr.h  ZoneScript.h
src/server/game/Miscellaneous/: Formulas.h  Language.h  SharedDefines.h
src/server/game/Movement/: MotionMaster.cpp  MotionMaster.h  MovementGenerator.cpp  MovementGenerator.h  MovementGeneratorImpl.h  PathGenerator.cpp  PathGenerator.h
src/server/game/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvP.h  OutdoorPvPMgr.cpp  OutdoorPvPMgr.h
src/server/game/Pool/: NodeType4.cpp  PoolSession.cpp  PoolSession.h  PoolSessionMgr.cpp  PoolSessionMgr.h  PoolSocket.cpp  PoolSocket.h  PoolSocketAcceptor.h  PoolSocketMgr.cpp  PoolSocketMgr.h
src/server/game/Pools/: PoolMgr.cpp  PoolMgr.h
src/server/proxyserver/: CMakeLists.txt  Main.cpp  Master.cpp  proxyserver.conf.dist  proxyserver.rc
src/server/pvp_node/: CMakeLists.txt  Main.cpp  Master.h  pvp_node.conf.dist  pvp_node.rc  resource.h
src/server/scripts/: CMakeLists.txt
src/server/shade/: CMakeLists.txt
src/server/shared/: AutoPtr.h  BlizzardHeader.hpp  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Containers.h  Define.h  FlexiHeader.hpp  LoginHolderEnum.h  OpcodeDefines.hpp  OpcodeTable.hpp  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  worldserver.conf.dist  worldserver.rc
(+1202 files in other folders)
